convert tables back to divs due to inexplicable fixed-width whitespace between slider panels

--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,14 @@
 html {
-  transform: scale(0.95);
+  /*transform: scale(0.95);*/
   -webkit-touch-callout: none;
   -webkit-user-select: none;
 }
 
 body {
-  font-family: Helvetica, sans-serif;
   background-color: hsl(302, 10%, 99%);
+  font-family: Helvetica, sans-serif;
+  font-size: 3vw;
+  color: hsl(302, 10%, 99%);
 }
 
 main {
@@ -24,10 +26,6 @@ button {
   background-position: center;
   background-repeat: no-repeat;
   padding: 0%; /* force iOS button width */
-}
-
-button:active {
-  border: none;
 }
 
 main #chordMenu {
@@ -160,6 +158,37 @@ button:active {
   border-radius: 0 0 1vw 1vw;
 }
 
+#ampSliders {
+  background-color: hsl(302, 58%, 36%);
+  border-bottom-right-radius: 0;
+  float: left;
+}
+
+#cutoffSliders {
+  background-color: hsl(340, 86%, 50%);
+  border-bottom-left-radius: 0;
+}
+
+#oscSliders {
+  background-color: hsl(324, 100%, 46%);
+  width: 100vw;
+  height: 10vw;
+}
+
+#ampSliders, #cutoffSliders {
+  width: 50vw;
+  height: 30vw;
+  display: inline-block;
+}
+
+.sliderPanel div {
+  height: 5vw;
+}
+
+.sliderPanel {
+  border-radius: 1vw;
+}
+
 input[type=range] {
     -webkit-appearance: none;
     background-color: hsl(0, 0%, 75%);;
@@ -181,6 +210,10 @@ input:focus {
   outline: none;
 }
 
+.gray {
+  color: hsl(0, 0%, 75%);
+}
+
 .name {
   width: 10vw;
   text-align: right;
@@ -191,55 +224,6 @@ input:focus {
   width: 10vw;
   text-align: left;
   padding-left: 1vw;
-}
-
-#ampSliders, #ampSliders th, #ampSliders td {
-  background-color: hsl(302, 58%, 36%);
-}
-
-#cutoffSliders, #cutoffSliders th, #cutoffSliders td {
-  background-color: hsl(340, 86%, 50%);
-}
-
-#oscSliders, #oscSliders th, #oscSliders td {
-  background-color: hsl(324, 100%, 46%);
-}
-
-#ampSliders, #cutoffSliders {
-  width: 48.75vw;
-  display: inline-block;
-}
-
-#cutoffSliders {
-  margin-left: 0.5vw;
-}
-
-#oscSliders {
-  width: 98.5vw;
-  height: 10vw;
-  margin: 0.5vw 0;
-}
-
-.sliderPanel, th, td {
-  text-align: center;
-  border: hsl(0, 0%, 75%);
-  border-radius: 1vw;
-  background-color: hsl(0, 0%, 75%);
-}
-
-th, td {
-  font-size: 3vw;
-  height: 5vw;
-  font-weight: normal;
-  color: hsl(302, 10%, 99%);
-}
-
-.gray {
-  color: hsl(0, 0%, 75%);
-}
-
-select {
-  font-size: 2vw;
 }
 
 #waveformMenu button {
@@ -253,7 +237,6 @@ select {
   border-radius: 0 0 0 1vw;
   border-left: none;
   border-right: none;
-  margin-right: -0.5vw; /* TODO: figure out why you had to use a negative margin */
 }
 
 #waveformMenu button:last-child {
